tests/ucc/bind/good/continue-break-switch-for.c
int main(void)
{
    int a = 0;

    for (; a != 0; a++)
    {
        switch (a)
        {
            case 0:
                continue;
            default:
                break;
        }
    }
}
