tests/ucc/bind/bad/continue-in-switch.c
int main(void)
{
    int a = 0;

    switch(a)
    {
        default:
            continue;
    }
}
